--- a/src/templates/base.jade
+++ b/src/templates/base.jade
@@ -3,12 +3,11 @@ html
   head
     meta(charset="utf-8")
     title Space Weather
-    link(href="../index.css",type="text/css",rel="stylesheet")
-    script(src="../index.js")
+    link(href="index.css",type="text/css",rel="stylesheet")
+    script(src="index.js")
   body
     svg
         defs
-            g#Icon01
-            g#Icon02
-                
+            symbol#Icon01
+            symbol#Icon02
     block content
