--- a/src/templates/base.jade
+++ b/src/templates/base.jade
@@ -2,12 +2,8 @@ doctype html
 html
   head
     meta(charset="utf-8")
-    title Space Weather
+    title SOL
     link(href="index.css",type="text/css",rel="stylesheet")
     script(src="index.js")
   body
-    svg
-        defs
-            symbol#Icon01
-            symbol#Icon02
     block content
