--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -3,7 +3,7 @@ extends base
 block content
     .Page
         .Page__top
-            .Logo Suntrek
+            .Logo SOL
             .Nav
                 a.Nav__item.isActive(href="") Weather
                 a.Nav__item(href="") Sunspots
