--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -1,3 +1,22 @@
+//----------------------------------------------------------
+// Variables
+
+$color-base = hsla(180,10%,70%,1)
+$color-link = hsla(180,20%,90%,1)
+
+//----------------------------------------------------------
+// Base styles
+
+@font-face
+    font-family 'FiraSans'
+    src url('fonts/FiraSans-Light.woff2') format('woff2')
+    font-weight 200
+
+@font-face
+    font-family 'FiraSans'
+    src url('fonts/FiraSans-Medium.woff2') format('woff2')
+    font-weight 500
+
 *
 *:before
 *:after
@@ -6,18 +25,42 @@
 html
     width 100%
     height 100%
+    background-color black
+    color $color-base
     
 body
+    font-family 'FiraSans'
+    font-weight 200
     height 100%
     
+a
+    color $color-link
+    text-decoration none
+
+//----------------------------------------------------------
+// Page layout
+
 .Page
+    height 100%
     display flex
+    flex-direction column
+    align-item stretch
     
 .Page__top
+.Page__bottom
     flex 0 0 4rem
+    display flex
     
 .Page__content
     flex 1 0 auto
+    display flex
 
-.Page__bottom
-    flex 0 0 4rem
+//----------------------------------------------------------
+// Nav
+
+.Nav
+    flex 1
+    display flex
+    justify-content flex-end
+
+
