--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -1,10 +1,10 @@
-//----------------------------------------------------------
+// ----------------------------------------------------------
 // Variables
 
 $color-base = hsla(180,10%,70%,1)
 $color-link = hsla(180,20%,90%,1)
 
-//----------------------------------------------------------
+// ----------------------------------------------------------
 // Base styles
 
 @font-face
@@ -21,18 +21,18 @@ $color-link = hsla(180,20%,90%,1)
 *:before
 *:after
     box-sizing border-box
-    
+
 html
     width 100%
     height 100%
     background-color black
     color $color-base
-    
+
 body
     font-family 'FiraSans'
     font-weight 200
     height 100%
-    
+
 a
     color $color-link
     text-decoration none
@@ -45,12 +45,12 @@ a
     display flex
     flex-direction column
     align-item stretch
-    
+
 .Page__top
 .Page__bottom
     flex 0 0 4rem
     display flex
-    
+
 .Page__content
     flex 1 0 auto
     display flex
