--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -1,8 +1,73 @@
 //----------------------------------------------------------
 // Variables
 
-$color-base = hsla(180, 10%, 70%, 1)
-$color-link = hsla(180, 20%, 90%, 1)
+$hue-general = 198
+
+$color-dim = hsla($hue-general, 10%, 20%, 1)
+$color-base = hsla($hue-general, 10%, 50%, 1)
+$color-link = hsla($hue-general, 10%, 80%, 1)
+$color-highlight = hsla($hue-general, 10%, 95%, 1)
+$color-title = hsla(32, 60%, 50%, 1)
 
 //----------------------------------------------------------
 // Components
+
+$Panel
+    padding 2rem
+    display flex
+    flex-direction column
+
+$Panel__header
+    position relative
+    font-size .875rem
+    display flex
+    border-bottom 1px solid $color-dim
+    border-top 1px solid $color-dim
+$Panel__decor
+    position absolute
+    content ''
+    width 1rem
+    height 1px
+    background-color $color-base
+$Panel__decor--long
+    position absolute
+    content ''
+    width 2rem
+    height 1px
+    background-color $color-base
+
+$Panel__title
+    flex 1 0 auto
+    text-transform uppercase
+    color $color-title
+    font-weight 500
+    padding 0.5rem 0
+
+$Panel__menu
+    flex 0 0 auto
+
+$Panel__content
+    flex 1 0 auto
+    border-bottom 1px solid $color-dim
+
+$NavActive
+    background-color $color-dim
+    color $color-highlight
+    border-radius .125rem
+    box-shadow inset 0 0 1rem alpha($color-highlight, 0.12)
+
+$NavHover
+    color $color-highlight
+    animation AnimHover .2s ease-in-out
+    background-color $color-dim
+
+@keyframes AnimHover
+    0%
+        box-shadow inset 0 0 0 $color-highlight
+        background-color black
+    50%
+        box-shadow inset 0 -2rem 0 $color-highlight
+        background-color black
+    100%
+        box-shadow inset 0 -2rem 0 $color-dim
+        background-color black
