--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -1,9 +1,10 @@
 extends base
 
 block content
+    canvas.Background
     .Page
         .Page__top
-            .Logo SOL
+            .Logo Project SOL
             .Nav
                 a.Nav__item.isActive(href="") Weather
                 a.Nav__item(href="") Sunspots
