--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -52,21 +52,23 @@ $Panel__content
 
 $NavActive
     background-color $color-dim
+    pointer-events none
     color $color-highlight
     border-radius .125rem
     box-shadow inset 0 0 1rem alpha($color-highlight, 0.12)
 
 $NavHover
     color $color-highlight
-    animation AnimHover .2s ease-in-out
+    animation AnimHover .1s ease-in-out
     background-color $color-dim
 
 @keyframes AnimHover
     0%
         box-shadow inset 0 0 0 $color-highlight
         background-color black
-    50%
+    66%
         box-shadow inset 0 -2rem 0 $color-highlight
+        color black
         background-color black
     100%
         box-shadow inset 0 -2rem 0 $color-dim
