panel content alignment

--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -38,6 +38,7 @@ block content
                     .Panel__header
                         .Panel__title Fluxes
                         .Panel__menu
+                            a.Panel__menuItem(href="") Solar Wind
                             a.Panel__menuItem.isActive(href="") Particle Flux
                             a.Panel__menuItem(href="") Electron Flux
                             a.Panel__menuItem(href="") X-Ray Flux
