--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -84,8 +84,8 @@ a
 // Nav
 
 .Logo
-    font-weight 200
-    font-size 1.5rem
+    font-weight 500
+    font-size 1rem
     color $color-base
 
 .Nav
@@ -93,9 +93,9 @@ a
     display flex
     justify-content flex-end
 .Nav__item
-    font-size 1.25rem
+    font-size 1rem
     text-transform uppercase
-    margin-left 2rem
+    margin-left .5rem
     padding 0.25rem 1rem
 
 .Nav__item.isActive
@@ -141,6 +141,7 @@ a
 .Panel__content
     @extend $Panel__content
     position relative
+    display flex
     &:before
     &:after
         @extend $Panel__decor
@@ -160,6 +161,7 @@ a
 .Weather__EITFilters
     @extend $Panel
     flex 0 0 40%
+    display flex
 
 .Weather__fluxes
     @extend $Panel
@@ -169,8 +171,6 @@ a
 // Sun visualization
 
 .Sun
-    width 100%
-    height 100%
     display flex
     align-items center
     justify-content center
