--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -12,7 +12,7 @@ block content
                 a.Nav__item(href="") Forecast
         .Page__content
             // Weather section
-            .Weather
+            section.Weather
                 .Weather__EITFilters
                     .Panel__header
                         .Panel__title EIT Filters
@@ -46,27 +46,57 @@ block content
                     .Panel__content
                         h2 Graph
             // Forecast Section
-            .Forecast.isActive
+            section.Forecast.isActive
                 .Forecast__graphs
-
+                    .Panel__header
+                        .Panel__title 3-day Forecast
+                        .Panel__menu
+                            a.Panel__menuItem(href="") Geomagnetic Activity
+                            a.Panel__menuItem.isActive(href="") Solar Radiation Activity
+                            a.Panel__menuItem(href="") Radio Blackout Activity
+                    .Panel__content
+                        h2 Graphs
                 .Forecast__alerts
                     .Panel__header
+                        .Panel__title Alerts
                     .Panel__content
                         .Alerts
                             .Alert
                                 input.Alert__input(type="checkbox", id="alert-001")
                                 label.Alert__basicInfo(for="alert-001")
-                                    .Alert__date 2015 Dec 15 0338 UTC - WARK04
-                                    .Alert__title Geomagnetic K-index of 4 expected
+                                    .Alert__metadata
+                                        .Alert__issueTime 2015 Dec 15 0338 UTC
+                                        .Alert__SWMC WARK04
+                                    .Alert__message Geomagnetic K-index of 4 expected
                                 .Alert__extendedInfo
-                                    h2 hola
-                            .Alert
+                                    .Alert__payload Extension to Serial Number: 2736\r\nValid From: 2015 Dec 09 2005 UTC\r\nNow Valid Until: 2015 Dec 12 0400 UTC\r\nWarning Condition: Persistence\r\nwww.swpc.noaa.gov/noaa-scales-explanation\r\nPotential Impacts: Area of impact primarily poleward of 65 degrees Geomagnetic Latitude.\r\nInduced Currents - Weak power grid fluctuations can occur.\r\nAurora - Aurora may be visible at high latitudes such as Canada and Alaska.
+                            .Alert.Alert--warning
                                 input.Alert__input(type="checkbox", id="alert-002")
                                 label.Alert__basicInfo(for="alert-002")
-                                    .Alert__date 2015 Dec 15 0338 UTC - WARK04
-                                    .Alert__title Geomagnetic K-index of 4 expected
+                                    .Alert__metadata
+                                        .Alert__issueTime 2015 Dec 15 0338 UTC
+                                        .Alert__SWMC WARK04
+                                    .Alert__message Electron 2MeV Integral Flux exceeded 1000pfu
                                 .Alert__extendedInfo
-                                    h2 hola
+                                    .Alert__payload Extension to Serial Number: 2736\r\nValid From: 2015 Dec 09 2005 UTC\r\nNow Valid Until: 2015 Dec 12 0400 UTC\r\nWarning Condition: Persistence\r\nwww.swpc.noaa.gov/noaa-scales-explanation\r\nPotential Impacts: Area of impact primarily poleward of 65 degrees Geomagnetic Latitude.\r\nInduced Currents - Weak power grid fluctuations can occur.\r\nAurora - Aurora may be visible at high latitudes such as Canada and Alaska.
+                            .Alert.Alert--summary
+                                input.Alert__input(type="checkbox", id="alert-003")
+                                label.Alert__basicInfo(for="alert-003")
+                                    .Alert__metadata
+                                        .Alert__issueTime 2015 Dec 15 0338 UTC
+                                        .Alert__SWMC WARK04
+                                    .Alert__message Geomagnetic K-index of 4 expected
+                                .Alert__extendedInfo
+                                    .Alert__payload Extension to Serial Number: 2736\r\nValid From: 2015 Dec 09 2005 UTC\r\nNow Valid Until: 2015 Dec 12 0400 UTC\r\nWarning Condition: Persistence\r\nwww.swpc.noaa.gov/noaa-scales-explanation\r\nPotential Impacts: Area of impact primarily poleward of 65 degrees Geomagnetic Latitude.\r\nInduced Currents - Weak power grid fluctuations can occur.\r\nAurora - Aurora may be visible at high latitudes such as Canada and Alaska.
+                            .Alert.Alert--extendedWarning
+                                input.Alert__input(type="checkbox", id="alert-004")
+                                label.Alert__basicInfo(for="alert-004")
+                                    .Alert__metadata
+                                        .Alert__issueTime 2015 Dec 15 0338 UTC
+                                        .Alert__SWMC WARK04
+                                    .Alert__message Geomagnetic K-index of 4 expected
+                                .Alert__extendedInfo
+                                    .Alert__payload Extension to Serial Number: 2736\r\nValid From: 2015 Dec 09 2005 UTC\r\nNow Valid Until: 2015 Dec 12 0400 UTC\r\nWarning Condition: Persistence\r\nwww.swpc.noaa.gov/noaa-scales-explanation\r\nPotential Impacts: Area of impact primarily poleward of 65 degrees Geomagnetic Latitude.\r\nInduced Currents - Weak power grid fluctuations can occur.\r\nAurora - Aurora may be visible at high latitudes such as Canada and Alaska.
 
         .Page__bottom
             .Timeline
