Alerts hover state

--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -1,9 +1,9 @@
 //----------------------------------------------------------
 // Variables
 
-$hue-general = 198
+$hue-general = 182
 
-$colorDim = hsla($hue-general, 10%, 20%, 1)
+$colorDim = hsla($hue-general, 10%, 20%, 0.75)
 $colorBase = hsla($hue-general, 10%, 50%, 1)
 $colorLink = hsla($hue-general, 10%, 80%, 1)
 $colorHighlight = hsla($hue-general, 10%, 95%, 1)
@@ -11,8 +11,8 @@ $colorTitle = hsla(32, 60%, 50%, 1)
 
 $colorAlert = hsla(32, 60%, 50%, 1)
 $colorAlertSummary = hsla(48, 40%, 50%, 1)
-$colorAlertWarning = hsla(16, 90%, 60%, 1)
-$colorCancelWarning = hsla(16, 90%, 60%, 1)
+$colorAlertWarning = hsla(16, 90%, 50%, 1)
+$colorAlertCancelWarning = hsla(92, 20%, 50%, 1)
 $colorAlertWatch = hsla(32, 60%, 50%, 1)
 
 $easeInCubic = cubic-bezier(0.550, 0.055, 0.675, 0.190)
