--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -97,6 +97,14 @@ block content
                                     .Alert__message Geomagnetic K-index of 4 expected
                                 .Alert__extendedInfo
                                     .Alert__payload Extension to Serial Number: 2736\r\nValid From: 2015 Dec 09 2005 UTC\r\nNow Valid Until: 2015 Dec 12 0400 UTC\r\nWarning Condition: Persistence\r\nwww.swpc.noaa.gov/noaa-scales-explanation\r\nPotential Impacts: Area of impact primarily poleward of 65 degrees Geomagnetic Latitude.\r\nInduced Currents - Weak power grid fluctuations can occur.\r\nAurora - Aurora may be visible at high latitudes such as Canada and Alaska.
-
+                            .Alert.Alert--cancelWarning
+                                input.Alert__input(type="checkbox", id="alert-004")
+                                label.Alert__basicInfo(for="alert-004")
+                                    .Alert__metadata
+                                        .Alert__issueTime 2015 Dec 15 0338 UTC
+                                        .Alert__SWMC WARK04
+                                    .Alert__message Geomagnetic K-index of 4 expected
+                                .Alert__extendedInfo
+                                    .Alert__payload Extension to Serial Number: 2736\r\nValid From: 2015 Dec 09 2005 UTC\r\nNow Valid Until: 2015 Dec 12 0400 UTC\r\nWarning Condition: Persistence\r\nwww.swpc.noaa.gov/noaa-scales-explanation\r\nPotential Impacts: Area of impact primarily poleward of 65 degrees Geomagnetic Latitude.\r\nInduced Currents - Weak power grid fluctuations can occur.\r\nAurora - Aurora may be visible at high latitudes such as Canada and Alaska.
         .Page__bottom
             .Timeline
