--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -22,7 +22,6 @@ html
     width 100%
     height 100%
     background-color black
-    color $colorBase
     margin 0
     padding 0
 
@@ -31,12 +30,15 @@ body
     overflow hidden
     margin 0
     padding 0
+    //font-size .875rem
 
 body
 label
 input
+    color $colorBase
     font-family 'FiraSans'
     font-weight 200
+    line-height 1.25
 
 a
     color $colorLink
@@ -56,12 +58,11 @@ a
 // Page background
 
 .Background
-    position fixed
+    position absolute
     top 0
+    right 0
+    bottom 0
     left 0
-    width 100%
-    height 100%
-
 
 // ----------------------------------------------------------
 // Page layout
@@ -71,6 +72,7 @@ a
     display flex
     flex-direction column
     align-items stretch
+    position relative
 
 .Page__top
 .Page__bottom
@@ -116,6 +118,22 @@ a
     @extend $NavActive
 
 // ----------------------------------------------------------
+// Controls
+
+.Controls
+    position fixed
+    display flex
+    bottom 2rem
+    right 2rem
+
+.Controls__sound
+    @extend $ControlButton
+
+.Controls__sound.isOn
+    @extend $ControlButton--active
+
+
+// ----------------------------------------------------------
 // Panel
 
 .Panel__header
@@ -138,10 +156,8 @@ a
     padding 0.25rem 0
 
 .Panel__menuItem
-    text-transform uppercase
-    padding 0.25rem 0.5rem
-    margin-left 0.25rem
-    display flex
+    @extend $MenuItem
+
 .Panel__menuItem.isActive
     @extend $NavActive
 
@@ -244,6 +260,7 @@ a
     .Alert__message
         color $colorHighlight
     .Alert__basicInfo
+        transition background-color .1s $easeInCubic
         background-color alpha($colorDim, .3)
 .Alert:hover .Alert__basicInfo:before
 .Alert__input:checked ~ .Alert__basicInfo:before
@@ -254,6 +271,7 @@ a
     display block
     padding-bottom 1rem
     cursor pointer
+    transition background-color .2s $easeInCubic
 
 .Alert__input
     width 0
@@ -280,3 +298,25 @@ a
     max-height 20rem
     transform translate3d(0,0,0)
     transition max-height .2s $easeInCubic
+
+// ----------------------------------------------------------
+// Solar Cycle Section
+
+.SolarCycle
+    @extend $Section
+
+.SolarCycle.isActive
+    @extend $Section--active
+
+.SolarCycle__graph
+    @extend $Panel--60
+
+.SolarCycle__description
+    flex 0 0 40%
+    padding 2rem
+
+.Text__header
+    @extend $Text__header
+
+.Text__body
+    @extend $Text__body
