sun filters timeline

--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -134,6 +134,13 @@ $Panel__content
     position relative
     display flex
     border-bottom 1px solid $colorDim
+    flex-direction column
+    padding 1rem 0
+
+$Panel__footer
+    flex 0 0 auto
+    position relative
+    border-top 1px solid $colorDim
 
 // ----------------------------------------------------------
 // Navigation
