Panel footer changed

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -178,6 +178,9 @@ p:first-line
 
 .Panel__content
     @extend $Panel__content
+
+.Panel__footer
+    @extend $Panel__footer
     position relative
     &:before
     &:after
@@ -215,7 +218,7 @@ p:first-line
 
 .Timeline
     position relative
-    flex 0 0 auto
+    flex 1
     border-top 1px solid $colorDim
     border-bottom 1px solid $colorDim
 
