--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -34,6 +34,7 @@ block content
                     .Panel__content
                         .Sun
                             img.Sun__image(src="images/giphy.gif")
+                    .Panel__footer
                         .Timeline
                             .Timeline__base
                             .Timeline__mark
@@ -47,6 +48,7 @@ block content
                             a.Panel__menuItem(href="") X-Ray Flux
                     .Panel__content
                         h2 Graph
+                    .Panel__footer
             // Sunspots
             section.Sunspots
                 .Sunspots__image
@@ -54,6 +56,7 @@ block content
                         .Panel__title Sunspots
                     .Panel__content
                         h2 Graph
+                    .Panel__footer
                 .Sunspots__description
                     .Text__header Lorem ipsum dolor sit amet
                     .Text__body
@@ -66,6 +69,7 @@ block content
                         .Panel__title Solar Cycle
                     .Panel__content
                         h2 Graphs
+                    .Panel__footer
                 .SolarCycle__description
                     .Text__header Lorem ipsum dolor sit amet
                     .Text__body
@@ -82,6 +86,7 @@ block content
                             a.Panel__menuItem(href="") Radio Blackout Activity
                     .Panel__content
                         h2 Graphs
+                    .Panel__footer
                 .Forecast__alerts
                     .Panel__header
                         .Panel__title Alerts
@@ -132,6 +137,7 @@ block content
                                     .Alert__message Geomagnetic K-index of 4 expected
                                 .Alert__extendedInfo
                                     .Alert__payload Extension to Serial Number: 2736\r\nValid From: 2015 Dec 09 2005 UTC\r\nNow Valid Until: 2015 Dec 12 0400 UTC\r\nWarning Condition: Persistence\r\nwww.swpc.noaa.gov/noaa-scales-explanation\r\nPotential Impacts: Area of impact primarily poleward of 65 degrees Geomagnetic Latitude.\r\nInduced Currents - Weak power grid fluctuations can occur.\r\nAurora - Aurora may be visible at high latitudes such as Canada and Alaska.
+                    .Panel__footer
         .Page__bottom
             .Controls
                 a.Controls__sound(href="") Audio
