--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -133,14 +133,16 @@ $Panel__content
     flex 1 0
     position relative
     display flex
-    border-bottom 1px solid $colorDim
     flex-direction column
     padding 1rem 0
 
 $Panel__footer
     flex 0 0 auto
     position relative
-    border-top 1px solid $colorDim
+    height 3rem
+    display flex
+    align-items center
+    border-bottom 1px solid $colorDim
 
 // ----------------------------------------------------------
 // Navigation
