--- a/src/templates/base.jade
+++ b/src/templates/base.jade
@@ -2,8 +2,9 @@ doctype html
 html
   head
     meta(charset="utf-8")
-    title SOL
+    title Aurora
     link(href="index.css",type="text/css",rel="stylesheet")
     script(src="index.js")
   body
     block content
+
