--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -116,8 +116,9 @@ $Panel__header
 $Panel__decor
     position absolute
     content ''
-    width 1rem
-    height 1px
+    width .25rem
+    height .25rem
+    transform rotate(45deg)
     background-color $colorBase
 $Panel__decor--long
     position absolute
